# news-application

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/backend/: main.py  models.py
parser_rss/: Dockerfile  pyproject.toml
parser_rss/migrations/models/: 0_20221230143501_init.py  1_20221230143707_update.py
parser_rss/parser_rss/: full_check.py  main.py  messaging.py  models.py  models_db.py  test.py
parser_tg/: parsing.session  pyproject.toml
parser_tg/parser_tg/: actions_db.py  chat_processing.py  headers.py  links.py  list_of_chats.py  main.py  models.py  parser.py  parsing.session  redising.py
publisher_tg/: Dockerfile  publishing.session  pyproject.toml
publisher_tg/publisher_tg/: formatting.py  main.py  publishing.py
